--- a/app-android/src/main/res/values/styles.xml
+++ b/app-android/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.Woolly.Main" parent="Theme.SplashScreen">
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
-        <item name="postSplashScreenTheme">@style/Theme.AppCompat.Light.NoActionBar</item>
+        <item name="postSplashScreenTheme">@style/Theme.AppCompat.DayNight.NoActionBar</item>
     </style>
 
 </resources>
