--- a/app-android/src/main/res/values/styles.xml
+++ b/app-android/src/main/res/values/styles.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <style name="Theme.Woolly.Main" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
         <item name="postSplashScreenTheme">@style/Theme.AppCompat.DayNight.NoActionBar</item>
     </style>
 
