--- a/app-android/src/main/res/values/styles.xml
+++ b/app-android/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Theme.Woolly.Main" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Woolly.Main" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
